--- a/ToDoListReact/package.json
+++ b/ToDoListReact/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "axios": "^1.6.3",
+    "dotenv": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
