--- a/ToDoApi/Dockerfile
+++ b/ToDoApi/Dockerfile
@@ -8,10 +8,10 @@ ENV ASPNETCORE_URLS=http://+:80
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG configuration=Release
 WORKDIR /src
-COPY ["ToDoApi/ToDoApi.csproj", "./"]
-RUN dotnet restore "ToDoApi.csproj"
+COPY ["ToDoApi/ToDoApi.csproj", "ToDoApi/"]
+RUN dotnet restore "ToDoApi/ToDoApi.csproj"
 COPY . .
-WORKDIR "/src"
+WORKDIR "/src/ToDoApi"
 RUN dotnet build "ToDoApi.csproj" -c $configuration -o /app/build
 
 FROM build AS publish
