--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -10,5 +10,6 @@
   "Issuer": "https://localhost:5136",
   "Audience": "https://localhost:5136",
   "Key": "This is a sample secret key - please don't use in production environment."
-}
+},
+    "Connection-String": "server=localhost;user=root;password=12345;database=ToDoDB"
 }
