--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -11,5 +11,7 @@
   "Audience": "https://localhost:5136",
   "Key": "This is a sample secret key - please don't use in production environment."
 },
-    "Connection-String": "server=localhost;user=root;password=12345;database=ToDoDB"
+  "ConnectionStrings": {
+
+}
 }
