--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -11,7 +11,10 @@
   "Audience": "https://localhost:5136",
   "Key": "This is a sample secret key - please don't use in production environment."
 },
-  "Connection-String": "   "
+  "ConnectionStrings": {
+  "ToDoDB": " "
+}
+
 
 
 }
