--- a/ToDoListReact/package.json
+++ b/ToDoListReact/package.json
@@ -36,6 +36,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://todolist-fullstack-10.onrender.com"
   
 }
